--- a/config/nginx/api.conf.j2
+++ b/config/nginx/api.conf.j2
@@ -1,7 +1,7 @@
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
-{% if domain %}
+{% if domain|string() != 'localhost' %}
   server_name {{ domain }} www.{{ domain }};
 {% else %}
   server_name localhost;
